<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/header_cliente" />

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/header_archivo" />

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/header_ws1" />

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$Workstation2Fragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/header_ws2" />

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$Workstation3Fragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/header_ws3" />

    <header
        android:fragment="cl.ubiobio.cim.chatred.settings.SettingsActivity$Workstation4Fragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/header_ws4" />

</preference-headers>
