<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_bluetooth" android:title="@string/action_bluetooth"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_wifi" android:title="@string/action_wifi"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="400" app:showAsAction="never" />
</menu>

<!--
<item android:id="@+id/action_user" android:title="@string/action_user"
android:orderInCategory="100" app:showAsAction="never" />
-->
