<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content">

    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
        -->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <PreferenceCategory
        android:title="@string/menu_cliente"
        android:key="cliente_categoria">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="cliente_esclavo"
            android:title="@string/cliente_esclavo" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="cliente_id"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/cliente_id" />

        <EditTextPreference
            android:defaultValue="0"
            android:inputType="number"
            android:key="cliente_estacion"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/cliente_estacion" />

        <!--
        <EditTextPreference
            android:defaultValue=""
            android:inputType="text"
            android:key="cliente_ip"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/cliente_ip" />
            -->

        <EditTextPreference
            android:defaultValue="6753"
            android:inputType="number"
            android:key="cliente_puerto"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/cliente_puerto" />

        <Preference
            android:selectable="false"
            android:enabled="true"
            android:key="cliente_ip"
            android:title=""
            android:summary="El IP se obtiene automaticamente de la red WIFI a la que el cliente esta conectado." />

    </PreferenceCategory>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
        -->

</PreferenceScreen>
